CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(RPly)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

ADD_LIBRARY(RPly STATIC rply.c rply.h)

OPTION(RPLY_BUILD_UTILITIES "Build the RPly utilities" OFF)

IF(RPLY_BUILD_UTILITIES)
ADD_EXECUTABLE(dump etc/dump.c)
TARGET_LINK_LIBRARIES(dump RPly)

ADD_EXECUTABLE(convert etc/convert.c)
TARGET_LINK_LIBRARIES(convert RPly)

ADD_EXECUTABLE(sconvert etc/sconvert.c)
TARGET_LINK_LIBRARIES(sconvert RPly)
ENDIF(RPLY_BUILD_UTILITIES)