CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(SPly)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

ADD_LIBRARY(SPly STATIC sply.c sply.h)

OPTION(SPLY_BUILD_UTILITIES "Build the SPly utilities" OFF)

IF(SPLY_BUILD_UTILITIES)
ADD_EXECUTABLE(dump etc/dump.c)
TARGET_LINK_LIBRARIES(dump SPly)

ADD_EXECUTABLE(convert etc/convert.c)
TARGET_LINK_LIBRARIES(convert SPly)

ADD_EXECUTABLE(sconvert etc/sconvert.c)
TARGET_LINK_LIBRARIES(sconvert SPly)
ENDIF(SPLY_BUILD_UTILITIES)